--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -103,6 +103,7 @@
     <Content Include="img\oillogo.png" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\css\M00001V2.css" />
     <Content Include="OIL\css\M00002.css" />
     <Content Include="OIL\css\OIM0003C.css" />
     <Content Include="OIL\css\OIM0002C.css" />
@@ -218,6 +219,7 @@
     <Content Include="OIL\M00001MENU.aspx" />
     <Content Include="OIL\css\ex\nprogress.css" />
     <Content Include="OIL\ex\page_404.html" />
+    <Content Include="OIL\M00001MENU_V2.aspx" />
     <Content Include="OIL\M00002MENU.aspx" />
     <Content Include="OIL\mas\OIM0002OrgCreate.aspx" />
     <Content Include="OIL\mas\OIM0002OrgList.aspx" />
@@ -247,6 +249,7 @@
     <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
+    <Content Include="OIL\script\M00001V2.js" />
     <Content Include="OIL\script\OIM0003C.js" />
     <Content Include="OIL\script\OIM0002C.js" />
     <Content Include="OIL\script\OIM0003L.js" />
@@ -506,6 +509,13 @@
     </Compile>
     <Compile Include="OIL\loc\OIT0005TankLocSearch.aspx.vb">
       <DependentUpon>OIT0005TankLocSearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\M00001MENU_V2.aspx.designer.vb">
+      <DependentUpon>M00001MENU_V2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\M00001MENU_V2.aspx.vb">
+      <DependentUpon>M00001MENU_V2.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\M00002MENU.aspx.designer.vb">
