--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -8,7 +8,11 @@
     <add key="Environment" value="TEST"/>
   </appSettings>
   <system.web>
-    <compilation strict="false" explicit="true" targetFramework="4.0" debug="true"/>
+    <compilation strict="false" explicit="true" targetFramework="4.0" debug="true">
+      <assemblies>
+        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      </assemblies>
+    </compilation>
     <httpRuntime maxRequestLength="2097151"/>
     <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master"/>
     <customErrors defaultRedirect="M00000LOGON.aspx" mode="Off">
