--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -2,12 +2,28 @@
 <!--
   ASP.NET アプリケーションの構成方法の詳細については、
   http://go.microsoft.com/fwlink/?LinkId=169433 を参照してください
-  -->
+ http://surferonwww.info/BlogEngine/?tag=/Chart
+ -->
 <configuration>
   <appSettings>
     <add key="Environment" value="TEST"/>
+    <!-- ↓チャートコントロール用の設定 -->
+    <add key="ChartImageHandler" value="storage=session;timeout=20;" />
+    <!-- ↑チャートコントロール用の設定 -->
   </appSettings>
   <system.web>
+    <!-- ↓チャートコントロール用の設定 -->
+    <httpHandlers>
+      <add path="ChartImg.axd"
+        verb="GET,HEAD,POST"
+        type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler,
+        System.Web.DataVisualization,
+        Version=4.0.0.0, 
+        Culture=neutral,
+        PublicKeyToken=31bf3856ad364e35"
+          validate="false" />
+    </httpHandlers>
+    <!-- ↑チャートコントロール用の設定 -->
     <compilation strict="false" explicit="true" targetFramework="4.0" debug="true">
       <assemblies>
         <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -35,6 +51,21 @@
         <add name="Pragma" value="no-cache"/>
       </customHeaders>
     </httpProtocol>
+    <!-- ↓チャートコントロール用の設定 -->
+    <handlers>
+      <remove name="ChartImageHandler" />
+      <add name="ChartImageHandler"
+        preCondition="integratedMode"
+        verb="GET,HEAD,POST"
+        path="ChartImg.axd"
+        type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler,
+        System.Web.DataVisualization,
+        Version=4.0.0.0, 
+        Culture=neutral, 
+        PublicKeyToken=31bf3856ad364e35" />
+    </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <!-- ↑チャートコントロール用の設定 -->
   </system.webServer>
   <system.webServer>
     <directoryBrowse enabled="true"/>
