月締め、各種送受信ペインのガワを 画像からロジックベースで生成

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -184,6 +184,7 @@
     <Content Include="OIL\img\suitekiEmptyIcon.png" />
     <Content Include="OIL\img\suitekiIcon.png" />
     <Content Include="OIL\img\tank.png" />
+    <Content Include="OIL\img\underArrow.png" />
     <Content Include="OIL\img\unlockKey.png" />
     <Content Include="OIL\img\warning.png" />
     <Content Include="OIL\img\w_cat.png" />
