--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -202,6 +202,7 @@
     <Content Include="OIL\inc\OIM0003WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0002WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0020WRKINC.ascx" />
+    <Content Include="OIL\inc\OIT0002WRKINCOLD.ascx" />
     <Content Include="OIL\loc\OIT0005TankLocDetail.aspx" />
     <Content Include="OIL\inc\OIT0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0004WRKINC.ascx" />
@@ -247,8 +248,11 @@
     <Content Include="OIL\menupane\MP0008BudgetYoYAmount.ascx" />
     <Content Include="OIL\menupane\MP0009ActualTraction.ascx" />
     <Content Include="OIL\menupane\MP0010ActualShippingExpenses.ascx" />
+    <Content Include="OIL\ord\OIT0002LinkDetailOLD.aspx" />
     <Content Include="OIL\ord\OIT0002LinkDetail.aspx" />
+    <Content Include="OIL\ord\OIT0002LinkListOLD.aspx" />
     <Content Include="OIL\ord\OIT0002LinkList.aspx" />
+    <Content Include="OIL\ord\OIT0002LinkSearchOLD.aspx" />
     <Content Include="OIL\ord\OIT0002LinkSearch.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
@@ -420,6 +424,13 @@
     </Compile>
     <Compile Include="OIL\inc\OIM0020WRKINC.ascx.vb">
       <DependentUpon>OIM0020WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0002WRKINCOLD.ascx.designer.vb">
+      <DependentUpon>OIT0002WRKINCOLD.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0002WRKINCOLD.ascx.vb">
+      <DependentUpon>OIT0002WRKINCOLD.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\loc\OIT0005TankLocDetail.aspx.designer.vb">
@@ -808,6 +819,13 @@
       <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkDetailOLD.aspx.designer.vb">
+      <DependentUpon>OIT0002LinkDetailOLD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkDetailOLD.aspx.vb">
+      <DependentUpon>OIT0002LinkDetailOLD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\ord\OIT0002LinkDetail.aspx.designer.vb">
       <DependentUpon>OIT0002LinkDetail.aspx</DependentUpon>
     </Compile>
@@ -815,11 +833,25 @@
       <DependentUpon>OIT0002LinkDetail.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkListOLD.aspx.designer.vb">
+      <DependentUpon>OIT0002LinkListOLD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkListOLD.aspx.vb">
+      <DependentUpon>OIT0002LinkListOLD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\ord\OIT0002LinkList.aspx.designer.vb">
       <DependentUpon>OIT0002LinkList.aspx</DependentUpon>
     </Compile>
     <Compile Include="OIL\ord\OIT0002LinkList.aspx.vb">
       <DependentUpon>OIT0002LinkList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkSearchOLD.aspx.designer.vb">
+      <DependentUpon>OIT0002LinkSearchOLD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkSearchOLD.aspx.vb">
+      <DependentUpon>OIT0002LinkSearchOLD.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0002LinkSearch.aspx.designer.vb">
