20200812_OT連携用の一覧画面（枠）作成

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -116,6 +116,7 @@
     <Content Include="OIL\css\OIM0020L.css" />
     <Content Include="OIL\css\OIM0020S.css" />
     <Content Include="OIL\css\OIM0001S.css" />
+    <Content Include="OIL\css\OIT0003OTL.css" />
     <Content Include="OIL\css\OIT0006D.css" />
     <Content Include="OIL\css\OIT0006L.css" />
     <Content Include="OIL\css\OIT0005C.css" />
@@ -264,6 +265,7 @@
     <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
+    <Content Include="OIL\ord\OIT0003OTLinkageList.aspx" />
     <Content Include="OIL\script\M00001.js" />
     <Content Include="OIL\script\OIM0003C.js" />
     <Content Include="OIL\script\OIM0002C.js" />
@@ -275,6 +277,7 @@
     <Content Include="OIL\script\OIM0020L.js" />
     <Content Include="OIL\script\OIM0020S.js" />
     <Content Include="OIL\script\OIT0003B.js" />
+    <Content Include="OIL\script\OIT0003OTL.js" />
     <Content Include="OIL\script\OIT0005D.js" />
     <Content Include="OIL\script\OIT0006D.js" />
     <Content Include="OIL\script\OIT0006L.js" />
@@ -919,6 +922,13 @@
     <Compile Include="OIL\ord\OIT0003OrderSearch.aspx.vb">
       <DependentUpon>OIT0003OrderSearch.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OTLinkageList.aspx.designer.vb">
+      <DependentUpon>OIT0003OTLinkageList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OTLinkageList.aspx.vb">
+      <DependentUpon>OIT0003OTLinkageList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
