託送指示書作成用クラス(Excel/CSV)のガワ配置、JOTWEB.vbprojを変更するので早めに同期

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -377,6 +377,8 @@
     <Compile Include="OIL\com\OIT0001CustomReport.vb" />
     <Compile Include="OIL\com\OIT0002CustomReport.vb" />
     <Compile Include="OIL\com\OIT0003CustomReport.vb" />
+    <Compile Include="OIL\com\OIT0003CustomReportTakusouCsv.vb" />
+    <Compile Include="OIL\com\OIT0003CustomReportTakusouExcel.vb" />
     <Compile Include="OIL\com\OIT0004CustomReportENEOS.vb" />
     <Compile Include="OIL\com\OIT0004CustomReport.vb" />
     <Compile Include="OIL\com\OIT0004CustomReportOLD.vb" />
