--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -388,6 +388,8 @@
     <Compile Include="OIL\com\OIT0002CustomReport.vb" />
     <Compile Include="OIL\com\OIT0002CustomReportOLD.vb" />
     <Compile Include="OIL\com\OIT0003CustomReport.vb" />
+    <Compile Include="OIL\com\OIT0003CustomReportReservedExcel.vb" />
+    <Compile Include="OIL\com\OIT0003CustomReportReservedCsv.vb" />
     <Compile Include="OIL\com\OIT0003CustomReportTakusouCsv.vb" />
     <Compile Include="OIL\com\OIT0003CustomReportTakusouExcel.vb" />
     <Compile Include="OIL\com\OIT0004CustomReportENEOS.vb" />
