--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -112,6 +112,9 @@
     <Content Include="OIL\css\OIM0002L.css" />
     <Content Include="OIL\css\OIM0003S.css" />
     <Content Include="OIL\css\OIM0002S.css" />
+    <Content Include="OIL\css\OIM0011C.css" />
+    <Content Include="OIL\css\OIM0011L.css" />
+    <Content Include="OIL\css\OIM0011S.css" />
     <Content Include="OIL\css\OIM0009S.css" />
     <Content Include="OIL\css\OIM0009L.css" />
     <Content Include="OIL\css\OIM0009C.css" />
@@ -208,6 +211,7 @@
     <Content Include="OIL\inc\OIM0002S.css" />
     <Content Include="OIL\inc\OIM0003WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0002WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0011WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0009WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0007WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0020WRKINC.ascx" />
@@ -242,8 +246,11 @@
     <Content Include="OIL\mas\OIM0004StationSearch.aspx" />
     <Content Include="OIL\mas\OIM0007TrainList.aspx" />
     <Content Include="OIL\mas\OIM0007TrainSearch.aspx" />
+    <Content Include="OIL\mas\OIM0011ToriCreate.aspx" />
     <Content Include="OIL\mas\OIM0009PlantCreate.aspx" />
+    <Content Include="OIL\mas\OIM0011ToriList.aspx" />
     <Content Include="OIL\mas\OIM0009PlantList.aspx" />
+    <Content Include="OIL\mas\OIM0011ToriSearch.aspx" />
     <Content Include="OIL\mas\OIM0009PlantSearch.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceCreate.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceDownload.aspx" />
@@ -282,6 +289,9 @@
     <Content Include="OIL\script\OIM0002L.js" />
     <Content Include="OIL\script\OIM0003S .js" />
     <Content Include="OIL\script\OIM0002S.js" />
+    <Content Include="OIL\script\OIM0011C.js" />
+    <Content Include="OIL\script\OIM0011L.js" />
+    <Content Include="OIL\script\OIM0011S.js" />
     <Content Include="OIL\script\OIM0009S.js" />
     <Content Include="OIL\script\OIM0009L.js" />
     <Content Include="OIL\script\OIM0009C.js" />
@@ -440,6 +450,13 @@
     </Compile>
     <Compile Include="OIL\inc\OIM0002WRKINC.ascx.vb">
       <DependentUpon>OIM0002WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0011WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0011WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0011WRKINC.ascx.vb">
+      <DependentUpon>OIM0011WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\inc\OIM0009WRKINC.ascx.designer.vb">
@@ -634,6 +651,13 @@
       <DependentUpon>OIM0007TrainSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="OIL\mas\OIM0011ToriCreate.aspx.designer.vb">
+      <DependentUpon>OIM0011ToriCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0011ToriCreate.aspx.vb">
+      <DependentUpon>OIM0011ToriCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\mas\OIM0009PlantCreate.aspx.designer.vb">
       <DependentUpon>OIM0009PlantCreate.aspx</DependentUpon>
     </Compile>
@@ -641,11 +665,25 @@
       <DependentUpon>OIM0009PlantCreate.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\mas\OIM0011ToriList.aspx.designer.vb">
+      <DependentUpon>OIM0011ToriList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0011ToriList.aspx.vb">
+      <DependentUpon>OIM0011ToriList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="OIL\mas\OIM0009PlantList.aspx.designer.vb">
       <DependentUpon>OIM0009PlantList.aspx</DependentUpon>
     </Compile>
     <Compile Include="OIL\mas\OIM0009PlantList.aspx.vb">
       <DependentUpon>OIM0009PlantList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0011ToriSearch.aspx.designer.vb">
+      <DependentUpon>OIM0011ToriSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0011ToriSearch.aspx.vb">
+      <DependentUpon>OIM0011ToriSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIM0009PlantSearch.aspx.designer.vb">
