--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -112,8 +112,11 @@
     <Content Include="OIL\css\OIM0002L.css" />
     <Content Include="OIL\css\OIM0003S.css" />
     <Content Include="OIL\css\OIM0002S.css" />
+    <Content Include="OIL\css\OIM0012C.css" />
     <Content Include="OIL\css\OIM0011C.css" />
+    <Content Include="OIL\css\OIM0012L.css" />
     <Content Include="OIL\css\OIM0011L.css" />
+    <Content Include="OIL\css\OIM0012S.css" />
     <Content Include="OIL\css\OIM0011S.css" />
     <Content Include="OIL\css\OIM0009S.css" />
     <Content Include="OIL\css\OIM0009L.css" />
@@ -211,6 +214,7 @@
     <Content Include="OIL\inc\OIM0002S.css" />
     <Content Include="OIL\inc\OIM0003WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0002WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0012WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0011WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0009WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0007WRKINC.ascx" />
@@ -246,10 +250,13 @@
     <Content Include="OIL\mas\OIM0004StationSearch.aspx" />
     <Content Include="OIL\mas\OIM0007TrainList.aspx" />
     <Content Include="OIL\mas\OIM0007TrainSearch.aspx" />
+    <Content Include="OIL\mas\OIM0012NiukeCreate.aspx" />
     <Content Include="OIL\mas\OIM0011ToriCreate.aspx" />
     <Content Include="OIL\mas\OIM0009PlantCreate.aspx" />
+    <Content Include="OIL\mas\OIM0012NiukeList.aspx" />
     <Content Include="OIL\mas\OIM0011ToriList.aspx" />
     <Content Include="OIL\mas\OIM0009PlantList.aspx" />
+    <Content Include="OIL\mas\OIM0012NiukeSearch.aspx" />
     <Content Include="OIL\mas\OIM0011ToriSearch.aspx" />
     <Content Include="OIL\mas\OIM0009PlantSearch.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceCreate.aspx" />
@@ -289,8 +296,11 @@
     <Content Include="OIL\script\OIM0002L.js" />
     <Content Include="OIL\script\OIM0003S .js" />
     <Content Include="OIL\script\OIM0002S.js" />
+    <Content Include="OIL\script\OIM0012C.js" />
     <Content Include="OIL\script\OIM0011C.js" />
+    <Content Include="OIL\script\OIM0012L.js" />
     <Content Include="OIL\script\OIM0011L.js" />
+    <Content Include="OIL\script\OIM0012S.js" />
     <Content Include="OIL\script\OIM0011S.js" />
     <Content Include="OIL\script\OIM0009S.js" />
     <Content Include="OIL\script\OIM0009L.js" />
@@ -450,6 +460,13 @@
     </Compile>
     <Compile Include="OIL\inc\OIM0002WRKINC.ascx.vb">
       <DependentUpon>OIM0002WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0012WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0012WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0012WRKINC.ascx.vb">
+      <DependentUpon>OIM0012WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\inc\OIM0011WRKINC.ascx.designer.vb">
@@ -651,6 +668,13 @@
       <DependentUpon>OIM0007TrainSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="OIL\mas\OIM0012NiukeCreate.aspx.designer.vb">
+      <DependentUpon>OIM0012NiukeCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0012NiukeCreate.aspx.vb">
+      <DependentUpon>OIM0012NiukeCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\mas\OIM0011ToriCreate.aspx.designer.vb">
       <DependentUpon>OIM0011ToriCreate.aspx</DependentUpon>
     </Compile>
@@ -665,6 +689,13 @@
       <DependentUpon>OIM0009PlantCreate.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\mas\OIM0012NiukeList.aspx.designer.vb">
+      <DependentUpon>OIM0012NiukeList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0012NiukeList.aspx.vb">
+      <DependentUpon>OIM0012NiukeList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="OIL\mas\OIM0011ToriList.aspx.designer.vb">
       <DependentUpon>OIM0011ToriList.aspx</DependentUpon>
     </Compile>
@@ -677,6 +708,13 @@
     </Compile>
     <Compile Include="OIL\mas\OIM0009PlantList.aspx.vb">
       <DependentUpon>OIM0009PlantList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0012NiukeSearch.aspx.designer.vb">
+      <DependentUpon>OIM0012NiukeSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0012NiukeSearch.aspx.vb">
+      <DependentUpon>OIM0012NiukeSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIM0011ToriSearch.aspx.designer.vb">
