Web.ConfigにIniファイルのパス設定を外だし、 Web.Configに設定が無い場合は今まで通りのパス取得 Web.Configにに設定したiniファイルが存在しない場合は503エラーをスロー

--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -10,6 +10,9 @@
     <!-- ↓チャートコントロール用の設定 -->
     <add key="ChartImageHandler" value="storage=session;timeout=20;" />
     <!-- ↑チャートコントロール用の設定 -->
+    <!-- ↓INIファイルのパス設定 -->    
+    <add key="InifilePath" value="C:\APPL\APPLINI\OIL\JOTWEB.ini"/>
+    <!-- ↑INIファイルのパス設定 -->
   </appSettings>
   <system.web>
     <!-- ↓チャートコントロール用の設定 -->
