--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -175,6 +175,7 @@
     <Content Include="OIL\css\OIT0006S.css" />
     <Content Include="OIL\css\OIT0007L.css" />
     <Content Include="OIL\css\OIT0007S.css" />
+    <Content Include="OIL\css\OIT0008M.css" />
     <Content Include="OIL\ex\page_err_default.html" />
     <Content Include="OIL\for\OIT0006OutOfServiceDetail.aspx" />
     <Content Include="OIL\for\OIT0006OutOfServiceList.aspx" />
@@ -241,8 +242,14 @@
     <Content Include="OIL\inc\OIM0011WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0009WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0007WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0016WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0017WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0019WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0020WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0021WRKINC.ascx" />
+    <Content Include="OIL\inc\OIM0024WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0007WRKINC.ascx" />
+    <Content Include="OIL\inc\OIT0008WRKINC.ascx" />
     <Content Include="OIL\lnk\OIT0007FileInputList.aspx" />
     <Content Include="OIL\lnk\OIT0007FileInputSearch.aspx" />
     <Content Include="OIL\loc\OIT0005TankLocDetail.aspx" />
@@ -297,10 +304,25 @@
     <Content Include="OIL\mas\OIM0012NiukeSearch.aspx" />
     <Content Include="OIL\mas\OIM0011ToriSearch.aspx" />
     <Content Include="OIL\mas\OIM0009PlantSearch.aspx" />
+    <Content Include="OIL\mas\OIM0016RTrainCreate.aspx" />
+    <Content Include="OIL\mas\OIM0016RTrainList.aspx" />
+    <Content Include="OIL\mas\OIM0016RTrainSearch.aspx" />
+    <Content Include="OIL\mas\OIM0017TrainOperationCreate.aspx" />
+    <Content Include="OIL\mas\OIM0017TrainOperationList.aspx" />
+    <Content Include="OIL\mas\OIM0017TrainOperationSearch.aspx" />
+    <Content Include="OIL\mas\OIM0019AccountCreate.aspx" />
+    <Content Include="OIL\mas\OIM0019AccountList.aspx" />
+    <Content Include="OIL\mas\OIM0019AccountSearch.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceCreate.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceDownload.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceList.aspx" />
     <Content Include="OIL\mas\OIM0020GuidanceSearch.aspx" />
+    <Content Include="OIL\mas\OIM0021LoadReserveCreate.aspx" />
+    <Content Include="OIL\mas\OIM0021LoadReserveList.aspx" />
+    <Content Include="OIL\mas\OIM0021LoadReserveSearch.aspx" />
+    <Content Include="OIL\mas\OIM0024PriorityCreate.aspx" />
+    <Content Include="OIL\mas\OIM0024PriorityList.aspx" />
+    <Content Include="OIL\mas\OIM0024PrioritySearch.aspx" />
     <Content Include="OIL\mas\OIS0001UserCreate.aspx" />
     <Content Include="OIL\mas\OIS0001UserList.aspx" />
     <Content Include="OIL\mas\OIS0001UserSearch.aspx" />
@@ -327,6 +349,7 @@
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
     <Content Include="OIL\ord\OIT0003OTLinkageList.aspx" />
     <Content Include="OIL\ord\OIT0003OTLinkageSearch.aspx" />
+    <Content Include="OIL\pay\OIT0008CostManagement.aspx" />
     <Content Include="OIL\script\M00001.js" />
     <Content Include="OIL\script\OIM0001C.js" />
     <Content Include="OIL\script\OIM0001L.js" />
@@ -358,9 +381,24 @@
     <Content Include="OIL\script\OIM0007L.js" />
     <Content Include="OIL\script\OIM0007C.js" />
     <Content Include="OIL\script\OIM0007S.js" />
+    <Content Include="OIL\script\OIM0016C.js" />
+    <Content Include="OIL\script\OIM0016L.js" />
+    <Content Include="OIL\script\OIM0016S.js" />
+    <Content Include="OIL\script\OIM0017C.js" />
+    <Content Include="OIL\script\OIM0017L.js" />
+    <Content Include="OIL\script\OIM0017S.js" />
+    <Content Include="OIL\script\OIM0019C.js" />
+    <Content Include="OIL\script\OIM0019L.js" />
+    <Content Include="OIL\script\OIM0019S.js" />
     <Content Include="OIL\script\OIM0020C.js" />
     <Content Include="OIL\script\OIM0020L.js" />
     <Content Include="OIL\script\OIM0020S.js" />
+    <Content Include="OIL\script\OIM0021C.js" />
+    <Content Include="OIL\script\OIM0021L.js" />
+    <Content Include="OIL\script\OIM0021S.js" />
+    <Content Include="OIL\script\OIM0024C.js" />
+    <Content Include="OIL\script\OIM0024L.js" />
+    <Content Include="OIL\script\OIM0024S.js" />
     <Content Include="OIL\script\OIT0003B.js" />
     <Content Include="OIL\script\OIT0003OTL.js" />
     <Content Include="OIL\script\OIT0003OTS.js" />
@@ -394,6 +432,7 @@
     <Content Include="OIL\script\OIM0004S.js" />
     <Content Include="OIL\script\OIT0007L.js" />
     <Content Include="OIL\script\OIT0007S.js" />
+    <Content Include="OIL\script\OIT0008M.js" />
     <Content Include="script\calendar.js" />
     <Content Include="script\common.js" />
     <Content Include="script\easyselectbox.min.js" />
@@ -575,6 +614,27 @@
       <DependentUpon>OIM0007WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\inc\OIM0016WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0016WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0016WRKINC.ascx.vb">
+      <DependentUpon>OIM0016WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0017WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0017WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0017WRKINC.ascx.vb">
+      <DependentUpon>OIM0017WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0019WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0019WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0019WRKINC.ascx.vb">
+      <DependentUpon>OIM0019WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\inc\OIM0020FILEUPLOAD.ashx.vb">
       <DependentUpon>OIM0020FILEUPLOAD.ashx</DependentUpon>
     </Compile>
@@ -585,11 +645,32 @@
       <DependentUpon>OIM0020WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\inc\OIM0021WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0021WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0021WRKINC.ascx.vb">
+      <DependentUpon>OIM0021WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0024WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0024WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0024WRKINC.ascx.vb">
+      <DependentUpon>OIM0024WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\inc\OIT0007WRKINC.ascx.designer.vb">
       <DependentUpon>OIT0007WRKINC.ascx</DependentUpon>
     </Compile>
     <Compile Include="OIL\inc\OIT0007WRKINC.ascx.vb">
       <DependentUpon>OIT0007WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0008WRKINC.ascx.designer.vb">
+      <DependentUpon>OIT0008WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0008WRKINC.ascx.vb">
+      <DependentUpon>OIT0008WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\lnk\OIT0007FileInputList.aspx.designer.vb">
@@ -921,6 +1002,69 @@
       <DependentUpon>OIM0009PlantSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="OIL\mas\OIM0016RTrainCreate.aspx.designer.vb">
+      <DependentUpon>OIM0016RTrainCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0016RTrainCreate.aspx.vb">
+      <DependentUpon>OIM0016RTrainCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0016RTrainList.aspx.designer.vb">
+      <DependentUpon>OIM0016RTrainList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0016RTrainList.aspx.vb">
+      <DependentUpon>OIM0016RTrainList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0016RTrainSearch.aspx.designer.vb">
+      <DependentUpon>OIM0016RTrainSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0016RTrainSearch.aspx.vb">
+      <DependentUpon>OIM0016RTrainSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0017TrainOperationCreate.aspx.designer.vb">
+      <DependentUpon>OIM0017TrainOperationCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0017TrainOperationCreate.aspx.vb">
+      <DependentUpon>OIM0017TrainOperationCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0017TrainOperationList.aspx.designer.vb">
+      <DependentUpon>OIM0017TrainOperationList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0017TrainOperationList.aspx.vb">
+      <DependentUpon>OIM0017TrainOperationList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0017TrainOperationSearch.aspx.designer.vb">
+      <DependentUpon>OIM0017TrainOperationSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0017TrainOperationSearch.aspx.vb">
+      <DependentUpon>OIM0017TrainOperationSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0019AccountCreate.aspx.designer.vb">
+      <DependentUpon>OIM0019AccountCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0019AccountCreate.aspx.vb">
+      <DependentUpon>OIM0019AccountCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0019AccountList.aspx.designer.vb">
+      <DependentUpon>OIM0019AccountList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0019AccountList.aspx.vb">
+      <DependentUpon>OIM0019AccountList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0019AccountSearch.aspx.designer.vb">
+      <DependentUpon>OIM0019AccountSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0019AccountSearch.aspx.vb">
+      <DependentUpon>OIM0019AccountSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\mas\OIM0020GuidanceCreate.aspx.designer.vb">
       <DependentUpon>OIM0020GuidanceCreate.aspx</DependentUpon>
     </Compile>
@@ -948,6 +1092,48 @@
     <Compile Include="OIL\mas\OIM0020GuidanceSearch.aspx.vb">
       <DependentUpon>OIM0020GuidanceSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0021LoadReserveCreate.aspx.designer.vb">
+      <DependentUpon>OIM0021LoadReserveCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0021LoadReserveCreate.aspx.vb">
+      <DependentUpon>OIM0021LoadReserveCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0021LoadReserveList.aspx.designer.vb">
+      <DependentUpon>OIM0021LoadReserveList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0021LoadReserveList.aspx.vb">
+      <DependentUpon>OIM0021LoadReserveList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0021LoadReserveSearch.aspx.designer.vb">
+      <DependentUpon>OIM0021LoadReserveSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0021LoadReserveSearch.aspx.vb">
+      <DependentUpon>OIM0021LoadReserveSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0024PriorityCreate.aspx.designer.vb">
+      <DependentUpon>OIM0024PriorityCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0024PriorityCreate.aspx.vb">
+      <DependentUpon>OIM0024PriorityCreate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0024PriorityList.aspx.designer.vb">
+      <DependentUpon>OIM0024PriorityList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0024PriorityList.aspx.vb">
+      <DependentUpon>OIM0024PriorityList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0024PrioritySearch.aspx.designer.vb">
+      <DependentUpon>OIM0024PrioritySearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\mas\OIM0024PrioritySearch.aspx.vb">
+      <DependentUpon>OIM0024PrioritySearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIS0001UserCreate.aspx.designer.vb">
       <DependentUpon>OIS0001UserCreate.aspx</DependentUpon>
@@ -1251,6 +1437,13 @@
       <DependentUpon>OIT0003OTLinkageSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="OIL\pay\OIT0008CostManagement.aspx.designer.vb">
+      <DependentUpon>OIT0008CostManagement.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\pay\OIT0008CostManagement.aspx.vb">
+      <DependentUpon>OIT0008CostManagement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -1286,7 +1479,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="OIL\dat\" />
-    <Folder Include="OIL\pay\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
