--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -175,6 +175,7 @@
     <Content Include="OIL\css\OIT0006S.css" />
     <Content Include="OIL\css\OIT0007L.css" />
     <Content Include="OIL\css\OIT0007S.css" />
+    <Content Include="OIL\css\OIT0008D.css" />
     <Content Include="OIL\css\OIT0008M.css" />
     <Content Include="OIL\ex\page_err_default.html" />
     <Content Include="OIL\for\OIT0006OutOfServiceDetail.aspx" />
@@ -349,6 +350,7 @@
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
     <Content Include="OIL\ord\OIT0003OTLinkageList.aspx" />
     <Content Include="OIL\ord\OIT0003OTLinkageSearch.aspx" />
+    <Content Include="OIL\pay\OIT0008CostDetail.aspx" />
     <Content Include="OIL\pay\OIT0008CostManagement.aspx" />
     <Content Include="OIL\script\M00001.js" />
     <Content Include="OIL\script\OIM0001C.js" />
@@ -1437,6 +1439,13 @@
     <Compile Include="OIL\ord\OIT0003OTLinkageSearch.aspx.vb">
       <DependentUpon>OIT0003OTLinkageSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\pay\OIT0008CostDetail.aspx.designer.vb">
+      <DependentUpon>OIT0008CostDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\pay\OIT0008CostDetail.aspx.vb">
+      <DependentUpon>OIT0008CostDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\pay\OIT0008CostManagement.aspx.designer.vb">
       <DependentUpon>OIT0008CostManagement.aspx</DependentUpon>
