--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -501,6 +501,7 @@
     <Compile Include="OIL\com\OIT0002CustomReport.vb" />
     <Compile Include="OIL\com\OIT0002CustomReportOLD.vb" />
     <Compile Include="OIL\com\OIT0003CustomMultiReport.vb" />
+    <Compile Include="OIL\com\OIT0008CustomReport .vb" />
     <Compile Include="OIL\com\OIT0003CustomReport.vb" />
     <Compile Include="OIL\com\OIT0003CustomReportReservedExcel.vb" />
     <Compile Include="OIL\com\OIT0003CustomReportReservedCsv.vb" />
