--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -113,6 +113,7 @@
     <Content Include="img\oillogo.png" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\ana\OIT0009TransportAnalysis.aspx" />
     <Content Include="OIL\css\M00001.css" />
     <Content Include="OIL\css\M00002.css" />
     <Content Include="OIL\css\OIM0001C.css" />
@@ -179,6 +180,7 @@
     <Content Include="OIL\css\OIT0007S.css" />
     <Content Include="OIL\css\OIT0008D.css" />
     <Content Include="OIL\css\OIT0008M.css" />
+    <Content Include="OIL\css\OIT0009TA.css" />
     <Content Include="OIL\ex\page_err_default.html" />
     <Content Include="OIL\for\OIT0006OutOfServiceDetail.aspx" />
     <Content Include="OIL\for\OIT0006OutOfServiceList.aspx" />
@@ -254,6 +256,7 @@
     <Content Include="OIL\inc\OIM0024WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0007WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0008WRKINC.ascx" />
+    <Content Include="OIL\inc\OIT0009WRKINC.ascx" />
     <Content Include="OIL\lnk\OIT0007FileInputList.aspx" />
     <Content Include="OIL\lnk\OIT0007FileInputSearch.aspx" />
     <Content Include="OIL\loc\OIT0005TankLocDetail.aspx" />
@@ -442,6 +445,7 @@
     <Content Include="OIL\script\OIT0007L.js" />
     <Content Include="OIL\script\OIT0007S.js" />
     <Content Include="OIL\script\OIT0008M.js" />
+    <Content Include="OIL\script\OIT0009TA.js" />
     <Content Include="script\calendar.js" />
     <Content Include="script\common.js" />
     <Content Include="script\easyselectbox.min.js" />
@@ -500,6 +504,13 @@
     <Compile Include="base\YDF.vb" />
     <Compile Include="inc\GRCO0100XLSUP.ashx.vb">
       <DependentUpon>GRCO0100XLSUP.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ana\OIT0009TransportAnalysis.aspx.designer.vb">
+      <DependentUpon>OIT0009TransportAnalysis.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ana\OIT0009TransportAnalysis.aspx.vb">
+      <DependentUpon>OIT0009TransportAnalysis.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\com\CsvCreate.vb" />
     <Compile Include="OIL\com\EntryHistory.vb" />
@@ -691,6 +702,13 @@
     </Compile>
     <Compile Include="OIL\inc\OIT0008WRKINC.ascx.vb">
       <DependentUpon>OIT0008WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0009WRKINC.ascx.designer.vb">
+      <DependentUpon>OIT0009WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0009WRKINC.ascx.vb">
+      <DependentUpon>OIT0009WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\lnk\OIT0007FileInputList.aspx.designer.vb">
