20210409_指摘票対応(No423)全体(空回日報取込対応) 20210409_受注明細画面(五井営業所対応)コスモ千葉タンク車の油種毎の出荷能力チェックを回線別に変更

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -512,6 +512,7 @@
       <DependentUpon>OIT0009TransportAnalysis.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="OIL\com\CmnParts.vb" />
     <Compile Include="OIL\com\CsvCreate.vb" />
     <Compile Include="OIL\com\EntryHistory.vb" />
     <Compile Include="OIL\com\M00001MP0002CustomReport.vb" />
