--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -518,6 +518,7 @@
     <Compile Include="OIL\com\M00001MP0002CustomReport.vb" />
     <Compile Include="OIL\com\M00001MP0009ActualTraction.vb" />
     <Compile Include="OIL\com\OIT0001CustomReport.vb" />
+    <Compile Include="OIL\com\OIT0005CustomReport.vb" />
     <Compile Include="OIL\com\OIT0002CustomReport.vb" />
     <Compile Include="OIL\com\OIT0002CustomReportOLD.vb" />
     <Compile Include="OIL\com\OIT0003CustomMultiReport.vb" />
